# browser-test

./: .env  .gitignore  install_dependencies.py  main.py  pyproject.toml  qt.conf  requirements.txt  reset_db.py  run_browser.py
alembic/: alembic.ini  env.py
assets/css/: boleto.css  cache.css  dashboard.css  gestao_gastos.css  gestao_pagamentos.css  login.css  menu_widget.css  mercadopago.css  nav_bar.css  painel.css  proxy.css  register.css  register_template.css  senha.css  styles.css
assets/html/: login.html  painel.html  register.html  settings.html
assets/js/: boleto.js  cache.js  clearCache.js  cpf.js  dashboard.js  downloads.js  gestao_gastos.js  gestao_pagamentos.js  login_simple.js  mercadopago.js  minimal_bridge.js  nova_ia.js  pagamentos.js  painel.js  perfil.js  proxy.js  register.js.old  register_simple.js  scripts.js  senha.js  telefone.js
config/: language_names.json  translations.json
core/: app.py  browser_window.py  tabs.py
core/managers/: bridge_manager.py  page_manager.py
core/widgets/: dashboard_widget.py  login_widget.py  notifications_widget.py  panel_widget.py  register_widget.py  rewards_widget.py  settings_widget.py
crud/: base_manager.py  crud_manager.py  database_adapter.py  sqlalchemy_ai_tools_manager.py  sqlalchemy_user_manager.py
database/: session_manager.py  sqlalchemy_config.py
database/models/: __init__.py  ai_tool.py  base.py  browser_settings.py  download.py  payment.py  relationships.py  user.py  (+2 more)
tests/: test_ai_tools_crud.py  test_user_crud.py
utils/: html_utils.py  json_utils.py  style_utils.py
(+8 files in other folders)
