[project]
name = "browser"
version = "0.1.0"
description = ""
authors = [
    {name = "browser_divisions"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyqt6 (>=6.9.0,<7.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "mysql-connector (>=2.2.9,<3.0.0)",
    "pyqt6-webengine (>=6.9.0,<7.0.0)",
    "sqlparse (>=0.5.3,<0.6.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
